@@ -231,7 +231,7 @@ The tools chosen for the development of the platform are:
 +---------------------------------------+---------------------------------------------------------------------------------+-------------------+
 | Multithreading (optional)             | `TBB <http://www.threadingbuildingblocks.org/>`_                                | 4.3               |
 +---------------------------------------+---------------------------------------------------------------------------------+-------------------+
-| Python support                        | `Python <http://www.python.org/>`_                                              | 2.6               |
+| Python support                        | `Python <http://www.python.org/>`_                                              | 3.5               |
 +---------------------------------------+---------------------------------------------------------------------------------+-------------------+
 | Plotting library (optional)           | `Matplotlib <http://matplotlib.org/>`_                                          | 1.3.1             |
 +---------------------------------------+---------------------------------------------------------------------------------+-------------------+
