@@ -16,6 +16,7 @@
  * Removed deprecated TBB.SetNumberOfThreads/GetNumberOfThreads
  * Removed deprecated MultiFORM.setMaximumNumberOfDesignPoints/getMaximumNumberOfDesignPoints
  * Removed deprecated SubsetSampling.getNumberOfSteps
+ * coupling_tools.execute: deprecated get_stderr,get_stdout for capture_output, returns CompletedProcess
 
 === Documentation ===
 
